# EdgeDistillDet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  REFACTORING_GUIDE.md  TODO.md  __init__.py  docker-compose.yml  installer.bat  main.py  pyproject.toml  requirements.txt  start_web.bat
.agent_state/run_history/: default.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_saas.py
configs/: .recent_config.json  _test_resume.yaml  agent_prompts.yaml  agent_tools_contract.json  dataset_coco.yaml  dataset_coco128.yaml  dataset_custom_template.yaml  dataset_mini_test.yaml  dataset_visdrone.yaml  distill_config.yaml  distill_config_cloud_example.yaml  distill_config_minimal_template.yaml  distill_config_remote_api_example.yaml  eval_config.yaml
core/: logging.py  model_metrics.py
core/detection/: small_target_detector.py
core/distillation/: adaptive_kd_trainer.py  callbacks.py  common.py  loss_functions.py
core/evaluation/: benchmark.py
datasets/mini_test/: data.yaml
datasets/mini_test/labels/train/: img_0000.txt  img_0001.txt  img_0002.txt  img_0003.txt  img_0004.txt  img_0005.txt  img_0006.txt  img_0007.txt
datasets/mini_test/labels/val/: img_0000.txt  img_0001.txt  img_0002.txt  img_0003.txt
deploy/: nginx.conf
deploy/autodl/: README.txt  backup.sh  env.example.sh  start_api.sh  start_worker.sh
docs/: BACKEND_VALIDATION_STRATEGY.md  CHANGELOG.md  COMPLETION_REPORT.md  DELIVERABLES_CHECKLIST.md  ERROR_FIX_SUMMARY.md  FEATURES.md  HOOKS_INTEGRATION_SUMMARY.md  IMPLEMENTATION_REPORT.md  MIGRATION_ACCEPTANCE_REPORT.md  README.md  SQLITE_MIGRATION_SUMMARY.md  TRAINING_CONFIG_VALIDATION_IMPLEMENTATION.md  TRAINING_CONFIG_VALIDATION_QUICK_START.md  regression_baseline.md  regression_post_refactor.md
runs/detect/runs/distill/exp1/: args.yaml  distill_state.json  results.csv
runs/detect/runs/exp/: args.yaml
runs/detect/runs/exp1/: args.yaml  distill_log.json  per_class_metrics.json  results.csv
runs/detect/runs/exp2/: args.yaml  results.csv
runs/detect/runs/exp3/: args.yaml  results.csv
runs/detect/runs/exp4/: args.yaml  results.csv
runs/detect/runs/exp5/: args.yaml  per_class_metrics.json  results.csv
scripts/: __init__.py  display_inference.py  download_dataset.py  download_models.py  evaluate.py  export_model.py  train_with_distill.py  visualize_dataset.py
tests/: conftest.py  test_adaptive_kd_trainer_metrics.py  test_adaptive_kd_trainer_proxy.py  test_agent_approval_flow.py  test_agent_config_diff.py  test_api_critical_path.py  test_metrics_cache.py  test_output_check.py  test_resume_constraints.py  test_settings_env.py  test_train_with_distill_args.py
utils/: __init__.py  dataset_analyzer.py  dataset_common.py  device_detect.py  edge_profiler.py  gpu_runtime.py  visualization.py
web/: app.py  package-lock.json  package.json  run.py  schemas.py  server.py  tempCodeRunnerFile.py  temp_export_payload.json  vite.config.js  websocket_server.py  worker_entry.py
web/agent_graph/: __init__.py  graph.py  model_client.py  runtime.py  types.py
web/agent_rag/: __init__.py  hybrid.py
web/core/: __init__.py  paths.py  request_context.py  saas_settings.py  settings.py  workspace.py
web/db/: __init__.py  models.py  session.py
web/jobs/: __init__.py  training_job_worker.py
web/routers/: agent.py  auth_api.py  config.py  datasets_api.py  health.py  hub_api.py  metrics.py  oauth_api.py  teams_api.py  train.py  ui.py  ws.py
web/saas/: __init__.py  team_fs.py
web/security/: __init__.py  jwt_tokens.py  password.py
web/services/: __init__.py  agent_service.py  backend_agent.py  backend_common.py  backend_config.py  backend_display.py  backend_export.py  backend_logic.py  backend_metrics.py  backend_state.py  backend_train.py  backend_train_runtime.py  backend_ui.py  config_api_service.py  config_service.py  display_service.py  export_service.py  metrics_pusher.py  metrics_service.py  train_service.py  training_queue_service.py  training_runtime.py  ws_manager.py
web/services/cache/: __init__.py  csv_cache.py  result_manifest_cache.py
web/services/io/: __init__.py  csv_io.py
web/services/scan/: __init__.py  results_discovery.py
web/src/: App.jsx  main.jsx
web/src/api/: agentApi.js  agentStreamApi.js  client.js  configApi.js  metricsApi.js  saasApi.js  trainApi.js
web/src/components/: SaasBar.jsx
web/src/components/display/: QuickStat.jsx
web/src/components/forms/: M3Select.jsx  NumberField.jsx  ParameterField.jsx  PathField.jsx  QuickStat.jsx  SelectField.jsx  TextField.jsx
web/src/components/ui/: button.jsx  input.jsx
web/src/constants/: advancedParameterCatalog.js  configGroups.js  distillConfigSync.js  trainingDefaults.js
web/src/features/agent/: AgentPanel.jsx  AgentPanelView.jsx  agentHelpers.js  agentRuntime.js
web/src/features/agent/constants/: agentPrompts.js
web/src/features/agent/utils/: agentTextUtils.js
web/src/features/config-center/: ConfigNav.jsx  UnifiedConfigPanel.jsx  YamlPreview.jsx
web/src/features/metrics/: MetricsPanel.jsx
web/src/features/metrics/components/: EpochRangeHint.jsx  OverviewCard.jsx
web/src/features/metrics/hooks/: useMetricsData.js
web/src/features/training/: TrainingPanel.jsx
web/src/features/training/components/: AdvancedCardsColumn.jsx  AdvancedViewContainer.jsx  DisplayLauncherPanel.jsx  DisplayViewContainer.jsx  DistillationCoreParamsCard.jsx  ExportLauncherPanel.jsx  ExportViewContainer.jsx  OutputConfigCard.jsx  ResumeHistoryCard.jsx  TrainingHyperparamsSection.jsx  TrainingLauncher.jsx  TrainingLogsPanel.jsx  TrainingModeSelector.jsx  TrainingViewContainer.jsx  WandbConfigCard.jsx  (+1 more)
web/src/hooks/: useToast.js
web/src/stores/: metricsUiStore.js
web/src/styles/: index.css
web/src/utils/: agentPayload.js  logging.js  patchHelpers.js  textSanitizer.js  time.js  toolHelpers.js
web/static/css/: styles.css
web/static/css/styles/: animations.css  index.css  responsive.css
web/static/js/: agent.js  animations.js  app.js  metrics.js  theme.js  training.js
web/templates/: index.html
(+29 files in other folders)
