[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgedistilldet"
dynamic = ["version"]
description = "面向边缘场景的微小目标蒸馏训练与检测评估（Ultralytics + AdaptiveKD）"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "EdgeDistillDet Research Team" }]
keywords = ["object-detection", "distillation", "yolo", "edge", "pytorch"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # === 核心依赖 ===
  "torch>=2.0.0,<3",
  "torchvision>=0.15.0",
  "ultralytics>=8.2.0,<9",
  "onnx>=1.12.0,<2.0.0",
  "onnxruntime>=1.17.0,<2.0.0",
  "onnxslim>=0.1.71",
  "opencv-python>=4.8.0,<5",
  "numpy>=1.24.0,<2",  # TF 2.16 需要 numpy<2
  "pandas>=2.0.0,<3",
  "matplotlib>=3.7.0,<4",
  "pyyaml>=6.0,<7",
  "tqdm>=4.65.0,<5",
  "fastapi==0.115.6",
  "pydantic>=2,<3",
  "pydantic-settings>=2.6.1,<3",
  "uvicorn[standard]==0.32.1",
  "requests>=2.31.0,<3",
  "psutil>=5.9.8,<7",
  
  # === 日志 / LLM ===
  "wandb>=0.17.0,<1",
  "langgraph>=0.2.0,<1",
  "langchain-core>=0.3.0,<1",
  
  # === 模型导出 / optional heavy runtimes ===
  # Note: heavyweight runtimes (TensorFlow, OpenVINO, CoreML, MNN, NNCN, etc.)
  # are available as optional dependencies (extras) to keep the base install small.
  "scikit-learn>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
# Optional groups (install with `pip install -e .[tf]` etc.)
tf = ["tensorflow>=2.16.0"]
edge = ["openvino>=2024.0.0", "nncf>=2.19.0", "MNN>=3.0.0"]
ml = ["coremltools>=8.0.0"]
tfjs = ["tensorflowjs>=4.7.0,<5.0.0"]
dev = ["pytest", "black", "ruff", "mypy"]

[project.scripts]
edgedistilldet = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.dynamic]
version = { attr = "main.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "utils*", "scripts*", "web*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "Q"]
extend-ignore = ["E203"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
strict = false